--- a/tools/fez-viewer/index.html
+++ b/tools/fez-viewer/index.html
@@ -11,10 +11,14 @@
   <meta name="description" content="Fez is one of my favorite games of all time. I wanted to do a bit of a tribute to the game as a personal project (I was originally hoping to make some papercraft or 3D printing). To help get a better view of the game, I was looking for a way to visualize the levels.
 
 
+    
+
 
 ">
   <meta property="og:description" content="Fez is one of my favorite games of all time. I wanted to do a bit of a tribute to the game as a personal project (I was originally hoping to make some papercraft or 3D printing). To help get a better view of the game, I was looking for a way to visualize the levels.
 
+
+    
 
 
 ">
@@ -245,7 +249,9 @@
       <article role="main" class="blog-post">
         <p>Fez is one of my favorite games of all time. I wanted to do a bit of a tribute to the game as a personal project (I was originally hoping to make some papercraft or 3D printing). To help get a better view of the game, I was looking for a way to visualize the levels.</p>
 
-<video loop autoplay src="/img/tools/fez-viewer/fox.mp4"></video>
+<video loop autoplay autobuffer muted playsinline>
+    <source src="/img/tools/fez-viewer/fox.mp4">
+</video>
 
 <p></p>
 
