Add missing <img> "alt" params

--- a/about/index.html
+++ b/about/index.html
@@ -283,7 +283,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/about/hiking_pic.jpg" />
+      <img itemprop="thumbnail" src="/img/about/hiking_pic.jpg" alt="/img/about/hiking_pic.jpg"/>
     </div>
     <a href="/img/about/hiking_pic.jpg" itemprop="contentUrl"></a>
   </figure>
