--- a/graphics/first-graphics-project/index.html
+++ b/graphics/first-graphics-project/index.html
@@ -321,7 +321,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/graphics/first-graphics-project/cg1_project_11.png');">
-      <img itemprop="thumbnail" src="/img/graphics/first-graphics-project/cg1_project_11.png" />
+      <img itemprop="thumbnail" src="/img/graphics/first-graphics-project/cg1_project_11.png" alt="/img/graphics/first-graphics-project/cg1_project_11.png"/>
     </div>
     <a href="/img/graphics/first-graphics-project/cg1_project_11.png" itemprop="contentUrl"></a>
   </figure>
@@ -332,7 +332,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/graphics/first-graphics-project/cg1_project_22.png');">
-      <img itemprop="thumbnail" src="/img/graphics/first-graphics-project/cg1_project_22.png" />
+      <img itemprop="thumbnail" src="/img/graphics/first-graphics-project/cg1_project_22.png" alt="/img/graphics/first-graphics-project/cg1_project_22.png"/>
     </div>
     <a href="/img/graphics/first-graphics-project/cg1_project_22.png" itemprop="contentUrl"></a>
   </figure>
