--- a/graphics/particle-system/index.html
+++ b/graphics/particle-system/index.html
@@ -345,7 +345,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/graphics/particle-system/particle_system_1.png');">
-      <img itemprop="thumbnail" src="/img/graphics/particle-system/particle_system_1.png" />
+      <img itemprop="thumbnail" src="/img/graphics/particle-system/particle_system_1.png" alt="/img/graphics/particle-system/particle_system_1.png"/>
     </div>
     <a href="/img/graphics/particle-system/particle_system_1.png" itemprop="contentUrl"></a>
   </figure>
@@ -356,7 +356,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/graphics/particle-system/particle_system_2.png');">
-      <img itemprop="thumbnail" src="/img/graphics/particle-system/particle_system_2.png" />
+      <img itemprop="thumbnail" src="/img/graphics/particle-system/particle_system_2.png" alt="/img/graphics/particle-system/particle_system_2.png"/>
     </div>
     <a href="/img/graphics/particle-system/particle_system_2.png" itemprop="contentUrl"></a>
   </figure>
@@ -367,7 +367,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/graphics/particle-system/particle_system_3.png');">
-      <img itemprop="thumbnail" src="/img/graphics/particle-system/particle_system_3.png" />
+      <img itemprop="thumbnail" src="/img/graphics/particle-system/particle_system_3.png" alt="/img/graphics/particle-system/particle_system_3.png"/>
     </div>
     <a href="/img/graphics/particle-system/particle_system_3.png" itemprop="contentUrl"></a>
   </figure>
