--- a/graphics/signed-distance-fields/index.html
+++ b/graphics/signed-distance-fields/index.html
@@ -314,7 +314,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/graphics/signed-distance-fields/distance_fields.png" />
+      <img itemprop="thumbnail" src="/img/graphics/signed-distance-fields/distance_fields.png" alt="/img/graphics/signed-distance-fields/distance_fields.png"/>
     </div>
     <a href="/img/graphics/signed-distance-fields/distance_fields.png" itemprop="contentUrl"></a>
   </figure>
