--- a/hardware/midi-controller/index.html
+++ b/hardware/midi-controller/index.html
@@ -312,7 +312,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_2731.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_2731.jpg" alt="/img/hardware/midi-controller/IMG_2731.jpg"/>
     </div>
     <a href="/img/hardware/midi-controller/IMG_2731.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -328,7 +328,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_2983.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_2983.jpg" alt="/img/hardware/midi-controller/IMG_2983.jpg"/>
     </div>
     <a href="/img/hardware/midi-controller/IMG_2983.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -339,7 +339,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/touchscreen.png" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/touchscreen.png" alt="/img/hardware/midi-controller/touchscreen.png"/>
     </div>
     <a href="/img/hardware/midi-controller/touchscreen.png" itemprop="contentUrl"></a>
   </figure>
@@ -453,7 +453,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/MIDI_final.png" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/MIDI_final.png" alt="/img/hardware/midi-controller/MIDI_final.png"/>
     </div>
     <a href="/img/hardware/midi-controller/MIDI_final.png" itemprop="contentUrl"></a>
   </figure>
@@ -464,7 +464,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_3028.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_3028.jpg" alt="/img/hardware/midi-controller/IMG_3028.jpg"/>
     </div>
     <a href="/img/hardware/midi-controller/IMG_3028.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -478,7 +478,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_2955.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_2955.jpg" alt="/img/hardware/midi-controller/IMG_2955.jpg"/>
     </div>
     <a href="/img/hardware/midi-controller/IMG_2955.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -489,7 +489,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_3034.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_3034.jpg" alt="/img/hardware/midi-controller/IMG_3034.jpg"/>
     </div>
     <a href="/img/hardware/midi-controller/IMG_3034.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -503,7 +503,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_3042.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/midi-controller/IMG_3042.jpg" alt="/img/hardware/midi-controller/IMG_3042.jpg"/>
     </div>
     <a href="/img/hardware/midi-controller/IMG_3042.jpg" itemprop="contentUrl"></a>
   </figure>
