--- a/hardware/monitor-overclock/index.html
+++ b/hardware/monitor-overclock/index.html
@@ -345,7 +345,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/monitor-overclock/IMG_4022.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/monitor-overclock/IMG_4022.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/monitor-overclock/IMG_4022.jpg" alt="/img/hardware/monitor-overclock/IMG_4022.jpg"/>
     </div>
     <a href="/img/hardware/monitor-overclock/IMG_4022.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -389,7 +389,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/monitor-overclock/IMG_4037.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/monitor-overclock/IMG_4037.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/monitor-overclock/IMG_4037.jpg" alt="/img/hardware/monitor-overclock/IMG_4037.jpg"/>
     </div>
     <a href="/img/hardware/monitor-overclock/IMG_4037.jpg" itemprop="contentUrl"></a>
   </figure>
