--- a/software/from-an-is-a-to-a-has-a-object-model/index.html
+++ b/software/from-an-is-a-to-a-has-a-object-model/index.html
@@ -316,7 +316,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/software/from-an-is-a-to-a-has-a-object-model/is-a-model.png" />
+      <img itemprop="thumbnail" src="/img/software/from-an-is-a-to-a-has-a-object-model/is-a-model.png" alt="/img/software/from-an-is-a-to-a-has-a-object-model/is-a-model.png"/>
     </div>
     <a href="/img/software/from-an-is-a-to-a-has-a-object-model/is-a-model.png" itemprop="contentUrl"></a>
   </figure>
@@ -331,7 +331,7 @@ Black arrows denote inheritance.</p>
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/software/from-an-is-a-to-a-has-a-object-model/has-a-model.png" />
+      <img itemprop="thumbnail" src="/img/software/from-an-is-a-to-a-has-a-object-model/has-a-model.png" alt="/img/software/from-an-is-a-to-a-has-a-object-model/has-a-model.png"/>
     </div>
     <a href="/img/software/from-an-is-a-to-a-has-a-object-model/has-a-model.png" itemprop="contentUrl"></a>
   </figure>
