--- a/software/ray-casting-and-picking-using-bullet-physics/index.html
+++ b/software/ray-casting-and-picking-using-bullet-physics/index.html
@@ -321,7 +321,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/software/ray-casting-and-picking-using-bullet-physics/Perspective_Transform_Diagram.png" />
+      <img itemprop="thumbnail" src="/img/software/ray-casting-and-picking-using-bullet-physics/Perspective_Transform_Diagram.png" alt="/img/software/ray-casting-and-picking-using-bullet-physics/Perspective_Transform_Diagram.png"/>
     </div>
     <a href="/img/software/ray-casting-and-picking-using-bullet-physics/Perspective_Transform_Diagram.png" itemprop="contentUrl"></a>
   </figure>
