--- a/games/cull-shot/index.html
+++ b/games/cull-shot/index.html
@@ -349,7 +349,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/games/cull-shot/cullshot.png" />
+      <img itemprop="thumbnail" src="/img/games/cull-shot/cullshot.png" alt="/img/games/cull-shot/cullshot.png"/>
     </div>
     <a href="/img/games/cull-shot/cullshot.png" itemprop="contentUrl"></a>
   </figure>
