--- a/games/zero-zen/index.html
+++ b/games/zero-zen/index.html
@@ -349,7 +349,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/games/zero-zen/ZeroZen_Billboard.png" />
+      <img itemprop="thumbnail" src="/img/games/zero-zen/ZeroZen_Billboard.png" alt="/img/games/zero-zen/ZeroZen_Billboard.png"/>
     </div>
     <a href="/img/games/zero-zen/ZeroZen_Billboard.png" itemprop="contentUrl"></a>
   </figure>
