--- a/hardware/gameboy-backlight/index.html
+++ b/hardware/gameboy-backlight/index.html
@@ -348,7 +348,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/gameboy-backlight/IMG_1806.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/gameboy-backlight/IMG_1806.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/gameboy-backlight/IMG_1806.jpg" alt="/img/hardware/gameboy-backlight/IMG_1806.jpg"/>
     </div>
     <a href="/img/hardware/gameboy-backlight/IMG_1806.jpg" itemprop="contentUrl"></a>
   </figure>
