--- a/hardware/mini-server/index.html
+++ b/hardware/mini-server/index.html
@@ -370,7 +370,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_3.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_3.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_3.jpg" alt="/img/hardware/mini-server/server_3.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_3.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -403,7 +403,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_6.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_6.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_6.jpg" alt="/img/hardware/mini-server/server_6.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_6.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -436,7 +436,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_9.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_9.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_9.jpg" alt="/img/hardware/mini-server/server_9.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_9.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -469,7 +469,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_12.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_12.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_12.jpg" alt="/img/hardware/mini-server/server_12.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_12.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -480,7 +480,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_13.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_13.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_13.jpg" alt="/img/hardware/mini-server/server_13.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_13.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -502,7 +502,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_15.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_15.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_15.jpg" alt="/img/hardware/mini-server/server_15.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_15.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -524,7 +524,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/hardware/mini-server/server_17.jpg');">
-      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_17.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/mini-server/server_17.jpg" alt="/img/hardware/mini-server/server_17.jpg"/>
     </div>
     <a href="/img/hardware/mini-server/server_17.jpg" itemprop="contentUrl"></a>
   </figure>
