--- a/hardware/remote-controlled-turret/index.html
+++ b/hardware/remote-controlled-turret/index.html
@@ -310,7 +310,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/hardware/remote-controlled-turret/angled_shot21.jpg" />
+      <img itemprop="thumbnail" src="/img/hardware/remote-controlled-turret/angled_shot21.jpg" alt="/img/hardware/remote-controlled-turret/angled_shot21.jpg"/>
     </div>
     <a href="/img/hardware/remote-controlled-turret/angled_shot21.jpg" itemprop="contentUrl"></a>
   </figure>
