--- a/tools/cuda-design-rule-checking/index.html
+++ b/tools/cuda-design-rule-checking/index.html
@@ -316,7 +316,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img">
-      <img itemprop="thumbnail" src="/img/tools/cuda-design-rule-checking/design_rules.png" />
+      <img itemprop="thumbnail" src="/img/tools/cuda-design-rule-checking/design_rules.png" alt="/img/tools/cuda-design-rule-checking/design_rules.png"/>
     </div>
     <a href="/img/tools/cuda-design-rule-checking/design_rules.png" itemprop="contentUrl"></a>
   </figure>
