--- a/tools/fez-viewer/index.html
+++ b/tools/fez-viewer/index.html
@@ -368,7 +368,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/tools/fez-viewer/FezViewer-2015-01-14-02-50-02-83.png');">
-      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-50-02-83.png" />
+      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-50-02-83.png" alt="/img/tools/fez-viewer/FezViewer-2015-01-14-02-50-02-83.png"/>
     </div>
     <a href="/img/tools/fez-viewer/FezViewer-2015-01-14-02-50-02-83.png" itemprop="contentUrl"></a>
   </figure>
@@ -379,7 +379,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/tools/fez-viewer/FezViewer-2015-01-14-02-48-16-99.png');">
-      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-48-16-99.png" />
+      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-48-16-99.png" alt="/img/tools/fez-viewer/FezViewer-2015-01-14-02-48-16-99.png"/>
     </div>
     <a href="/img/tools/fez-viewer/FezViewer-2015-01-14-02-48-16-99.png" itemprop="contentUrl"></a>
   </figure>
@@ -390,7 +390,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/tools/fez-viewer/FezViewer-2015-01-14-02-49-12-36.png');">
-      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-49-12-36.png" />
+      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-49-12-36.png" alt="/img/tools/fez-viewer/FezViewer-2015-01-14-02-49-12-36.png"/>
     </div>
     <a href="/img/tools/fez-viewer/FezViewer-2015-01-14-02-49-12-36.png" itemprop="contentUrl"></a>
   </figure>
@@ -401,7 +401,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/tools/fez-viewer/FezViewer-2015-01-14-02-44-33-82.png');">
-      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-44-33-82.png" />
+      <img itemprop="thumbnail" src="/img/tools/fez-viewer/FezViewer-2015-01-14-02-44-33-82.png" alt="/img/tools/fez-viewer/FezViewer-2015-01-14-02-44-33-82.png"/>
     </div>
     <a href="/img/tools/fez-viewer/FezViewer-2015-01-14-02-44-33-82.png" itemprop="contentUrl"></a>
   </figure>
@@ -412,7 +412,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/tools/fez-viewer/fez-viewer-v0-1-released.jpg');">
-      <img itemprop="thumbnail" src="/img/tools/fez-viewer/fez-viewer-v0-1-released.jpg" />
+      <img itemprop="thumbnail" src="/img/tools/fez-viewer/fez-viewer-v0-1-released.jpg" alt="/img/tools/fez-viewer/fez-viewer-v0-1-released.jpg"/>
     </div>
     <a href="/img/tools/fez-viewer/fez-viewer-v0-1-released.jpg" itemprop="contentUrl"></a>
   </figure>
@@ -423,7 +423,7 @@
 <div class="box" >
   <figure  itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <div class="img" style="background-image: url('https://halogenica.github.io/img/tools/fez-viewer/fox.gif');">
-      <img itemprop="thumbnail" src="/img/tools/fez-viewer/fox.gif" />
+      <img itemprop="thumbnail" src="/img/tools/fez-viewer/fox.gif" alt="/img/tools/fez-viewer/fox.gif"/>
     </div>
     <a href="/img/tools/fez-viewer/fox.gif" itemprop="contentUrl"></a>
   </figure>
