--- a/graphics/volume-rendering-on-the-psp/index.html
+++ b/graphics/volume-rendering-on-the-psp/index.html
@@ -403,7 +403,7 @@
         <ul class="list-inline text-center footer-links">
           
               <li>
-                <a href="mailto:mike@halogenica.net" title="Email me">
+                <a href="mailto:michael.robert.romero@gmail.com" title="Email me">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
