--- a/software/scriptable-asset-loading/index.html
+++ b/software/scriptable-asset-loading/index.html
@@ -423,7 +423,7 @@ game.AddEnemy(729, 0, 0, 12, 1.8, 0.9764705, 0.1490196, 0.4470588, 1)</pre></div
         <ul class="list-inline text-center footer-links">
           
               <li>
-                <a href="mailto:mike@halogenica.net" title="Email me">
+                <a href="mailto:michael.robert.romero@gmail.com" title="Email me">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
